# lecture_time

./: .gitignore  docker-compose.yml  login.html  pyproject.toml  requirements.txt  signup.html
dongari/: pyvenv.cfg
src/: main.py
src/api/v1/: __init__.py
src/api/v1/login/: login_control.py  login_dao.py  login_dto.py  login_service.py
src/api/v1/time/: time_control.py  time_dao.py  time_service.py
src/core/: config.py  cors.py  error.py  event.py  status.py  type.py
src/front/: calendar.css  calendar.html  calendar.js  login.css  login.html  login.js  modal.css
src/var/: dto.py  models.py  session.py
