[tool.poetry]
name = "lecture-time"
version = "0.1.0"
description = ""
authors = ["junyoung bak <bakjy0312@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
sqlalchemy = "^2.0.29"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
email-validator = "^2.1.1"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
python-dotenv = "^1.0.1"
pyjwt = "^2.8.0"
python-decouple = "^3.8"
pydantic = "^2.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
